added graph basics and tests

--- a/package.json
+++ b/package.json
@@ -2,16 +2,9 @@
   "name": "@richlewis42/tschem",
   "version": "0.1.0",
   "author": "Rich Lewis",
-  "main": "app/build/index.js",
-  "dependencies": {},
-  "devDependencies": {
-  },
-  "scripts": {
-  },
-  "description": "An awesome MVC typescript project, that displays Hello World.",
-  "directories": {
-    "test": "test"
-  },
+  "main": "build/tschem.js",
+  "devDependencies": {},
+  "description": "A TypeScript Cheminformatics library",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/richlewis42/tschem.git"
@@ -24,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/richlewis42/tschem/issues"
   },
-  "homepage": "https://github.com/richlewis42/tschem#readme"
+  "homepage": "https://github.com/richlewis42/tschem#readme",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jasmine-node-karma build/test"
+  }
 }
